--- a/LangChain/3_Chains_LCEL.ipynb
+++ b/LangChain/3_Chains_LCEL.ipynb
@@ -228,9 +228,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca885ada",
+   "metadata": {},
+   "source": [
+    "RunnablePassThrough:<br> Without RunnablePassthrough: You lose your original data when you transform it<br>\n",
+    "With RunnablePassthrough: You keep your original data AND get new computed data<br><br>Without RunnablePassthrough:\n",
+    "Input: \"apple\" → [make uppercase] → Output: \"APPLE\" (lost original)<br>\n",
+    "With RunnablePassthrough:\n",
+    "Input: {\"fruit\": \"apple\"} → [keep original + add uppercase] → Output: {\"fruit\": \"apple\", \"uppercase\": \"APPLE\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f287720b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary: An interesting related fact is that **Gustave Eiffel's company wasn't originally intended to build the Eiffel Tower;  they won a design competition against over 100 other submissions.**  This highlights the competitive nature of its creation and the unexpected path to its construction.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "summary_prompt= ChatPromptTemplate.from_template(\n",
+    "    \"Summarize the following text:\\n{text}\\n\\nSummary:\"\n",
+    ")\n",
+    "question_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"Based on the original topic '{original_topic}', what is a related interesting fact?\"\n",
+    ")\n",
+    "parser = StrOutputParser()\n",
+    "\n",
+    "summary_chain = summary_prompt | llm | parser\n",
+    "# Use RunnablePassthrough to keep the original 'topic' and add the 'summary'\n",
+    "full_chain=(\n",
+    "    {\"summary\":summary_chain,\"original_topic\":RunnablePassthrough()}\n",
+    "    | question_prompt\n",
+    "    | llm\n",
+    "    | parser\n",
+    ")\n",
+    "input_data = {\n",
+    "    \"text\": \"The Eiffel Tower is a wrought-iron lattice tower\",\n",
+    "    \"original_topic\": \"Eiffel Tower\"\n",
+    "}\n",
+    "response = full_chain.invoke(input_data)\n",
+    "print(\"Summary:\", response)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f287720b",
+   "id": "c8142c75",
    "metadata": {},
    "outputs": [],
    "source": []
