--- a/LangChain/3_Chains_LCEL.ipynb
+++ b/LangChain/3_Chains_LCEL.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "2fa8faaa",
    "metadata": {},
    "outputs": [
@@ -281,9 +281,180 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f2202ed",
+   "metadata": {},
+   "source": [
+    ".assign()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c8142c75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passthrough Result: hello world\n",
+      "{'text': 'hello world', 'upper_case': 'HELLO WORLD', 'length': 11}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "passthroug= RunnablePassthrough()\n",
+    "\n",
+    "#result=passthroug.invoke(\"hello world\")\n",
+    "result=\"hello world\"\n",
+    "print(\"Passthrough Result:\", result)\n",
+    "\n",
+    "chain=RunnablePassthrough.assign(\n",
+    "    upper_case=lambda x: x[\"text\"].upper(),\n",
+    "    length=lambda x: len(x[\"text\"]),\n",
+    "    )\n",
+    "result=chain.invoke({\"text\": \"hello world\"})\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db3c29d8",
+   "metadata": {},
+   "source": [
+    "## Branching <br> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "819a3b05",
+   "metadata": {},
+   "source": [
+    "### Branching allows you to split execution into multiple parallel paths, each processing the same input differently."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6d9903d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'summary': AIMessage(content='The Eiffel Tower is a wrought-iron structure located in Paris, France.', additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-1.5-flash', 'safety_ratings': []}, id='run--26b5c2e5-c6e0-43ac-a1e4-b6418d77b295-0', usage_metadata={'input_tokens': 30, 'output_tokens': 16, 'total_tokens': 46, 'input_token_details': {'cache_read': 0}}), 'keywords': AIMessage(content='Keywords: Eiffel Tower, wrought-iron, lattice tower, Champ de Mars, Paris, France', additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-1.5-flash', 'safety_ratings': []}, id='run--44b4a6ed-f5a1-426c-ab38-e2999d893fb4-0', usage_metadata={'input_tokens': 31, 'output_tokens': 20, 'total_tokens': 51, 'input_token_details': {'cache_read': 0}}), 'sentiment': AIMessage(content='Sentiment: Neutral.\\n\\nThe text provides factual information about the Eiffel Tower, without expressing any positive or negative opinions or emotions.', additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-1.5-flash', 'safety_ratings': []}, id='run--79775cec-6a62-4687-bdbe-5ebd10db3993-0', usage_metadata={'input_tokens': 32, 'output_tokens': 26, 'total_tokens': 58, 'input_token_details': {'cache_read': 0}}), 'original_text': {'text': 'The Eiffel Tower is a wrought-iron lattice tower on the Champ de Mars in Paris, France.', 'original_text': 'Eiffel Tower'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.runnables import RunnableParallel\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "summary_prompt= PromptTemplate.from_template(\n",
+    "    \"Summarize the following text:\\n{text}\\n\\nSummary:\"\n",
+    ")\n",
+    "keywords_prompt= PromptTemplate.from_template(\n",
+    "    \"Extract keywords from the following text:\\n{text}\\n\\nKeywords:\"    \n",
+    ")\n",
+    "sentiment_prompt= PromptTemplate.from_template(\n",
+    "    \"Analyze the sentiment of the following text:\\n{text}\\n\\nSentiment:\"\n",
+    ")\n",
+    "\n",
+    "branch_chain= RunnableParallel({\n",
+    "    \"summary\": summary_prompt | llm,\n",
+    "    \"keywords\": keywords_prompt | llm,\n",
+    "    \"sentiment\": sentiment_prompt | llm,\n",
+    "    \"original_text\": RunnablePassthrough()\n",
+    "})\n",
+    "\n",
+    "result=branch_chain.invoke({\n",
+    "    \"text\": \"The Eiffel Tower is a wrought-iron lattice tower on the Champ de Mars in Paris, France.\",\n",
+    "    \"original_text\": \"Eiffel Tower\"\n",
+    "})\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0121b660",
+   "metadata": {},
+   "source": [
+    "### Conditional  Branching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "60eeb337",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "RunnableBranch default must be Runnable, callable or mapping.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 30\u001b[39m\n\u001b[32m     27\u001b[39m default_chain = RunnableMap({\u001b[33m\"\u001b[39m\u001b[33mquestion\u001b[39m\u001b[33m\"\u001b[39m: default_prompt}) | llm\n\u001b[32m     29\u001b[39m \u001b[38;5;66;03m# Create the branch chain\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m30\u001b[39m branch_chain = \u001b[43mRunnableBranch\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     31\u001b[39m \u001b[43m    \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mroute_question\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[43m==\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mjoke\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mjoke_chain\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     32\u001b[39m \u001b[43m    \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mroute_question\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[43m==\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mmath\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmath_chain\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     33\u001b[39m \u001b[43m    \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mroute_question\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[43m==\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdefault\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdefault_chain\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     34\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     36\u001b[39m \u001b[38;5;66;03m# Test the branch chain\u001b[39;00m\n\u001b[32m     37\u001b[39m math_result = branch_chain.invoke({\u001b[33m\"\u001b[39m\u001b[33mquestion\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mWhat is 2 + 2 in math?\u001b[39m\u001b[33m\"\u001b[39m})\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\ujwal\\OneDrive\\Documents\\Python modules\\PythonBasics_and_Modules\\LangChain\\venv\\Lib\\site-packages\\langchain_core\\runnables\\branch.py:108\u001b[39m, in \u001b[36mRunnableBranch.__init__\u001b[39m\u001b[34m(self, *branches)\u001b[39m\n\u001b[32m    103\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\n\u001b[32m    104\u001b[39m     default,\n\u001b[32m    105\u001b[39m     (Runnable, Callable, Mapping),  \u001b[38;5;66;03m# type: ignore[arg-type]\u001b[39;00m\n\u001b[32m    106\u001b[39m ):\n\u001b[32m    107\u001b[39m     msg = \u001b[33m\"\u001b[39m\u001b[33mRunnableBranch default must be Runnable, callable or mapping.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m108\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(msg)\n\u001b[32m    110\u001b[39m default_ = cast(\n\u001b[32m    111\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mRunnable[Input, Output]\u001b[39m\u001b[33m\"\u001b[39m, coerce_to_runnable(cast(\u001b[33m\"\u001b[39m\u001b[33mRunnableLike\u001b[39m\u001b[33m\"\u001b[39m, default))\n\u001b[32m    112\u001b[39m )\n\u001b[32m    114\u001b[39m _branches = []\n",
+      "\u001b[31mTypeError\u001b[39m: RunnableBranch default must be Runnable, callable or mapping."
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.runnables import RunnableBranch, RunnableMap\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "\n",
+    "def route_question(input_data):\n",
+    "    question = input_data[\"question\"].lower()\n",
+    "    if \"joke\" in question:\n",
+    "        return \"joke\"\n",
+    "    elif \"math\" in question:\n",
+    "        return \"math\"\n",
+    "    else:\n",
+    "        return \"default\"\n",
+    "\n",
+    "# Define prompts\n",
+    "math_prompt = PromptTemplate.from_template(\n",
+    "    \"Solve the following math problem:\\n{question}\\n\\nAnswer:\"\n",
+    ")\n",
+    "joke_prompt = PromptTemplate.from_template(\n",
+    "    \"Tell me a joke about {question}.\"\n",
+    ")\n",
+    "default_prompt = PromptTemplate.from_template(\n",
+    "    \"Provide a response to the following question:\\n{question}\\n\\nResponse:\"\n",
+    ")\n",
+    "\n",
+    "# Create RunnableMap for each chain\n",
+    "math_chain = RunnableMap({\"question\": math_prompt}) | llm\n",
+    "joke_chain = RunnableMap({\"question\": joke_prompt}) | llm\n",
+    "default_chain = RunnableMap({\"question\": default_prompt}) | llm\n",
+    "\n",
+    "# Create the branch chain\n",
+    "branch_chain = RunnableBranch(\n",
+    "    (lambda x: route_question(x) == \"joke\", joke_chain),\n",
+    "    (lambda x: route_question(x) == \"math\", math_chain),\n",
+    "    (lambda x: route_question(x) == \"default\", default_chain),\n",
+    ")\n",
+    "\n",
+    "# Test the branch chain\n",
+    "math_result = branch_chain.invoke({\"question\": \"What is 2 + 2 in math?\"})\n",
+    "print(\"Math Result:\", math_result)\n",
+    "\n",
+    "joke_result = branch_chain.invoke({\"question\": \"joke about lion\"})\n",
+    "print(\"Joke Result:\", joke_result)\n",
+    "\n",
+    "gen_result = branch_chain.invoke({\"question\": \"who are you\"})\n",
+    "print(\"General Result:\", gen_result)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8142c75",
+   "id": "cbc5d109",
    "metadata": {},
    "outputs": [],
    "source": []
