--- a/LangChain/4_memory.ipynb
+++ b/LangChain/4_memory.ipynb
@@ -142,9 +142,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3aefd2f",
+   "metadata": {},
+   "source": [
+    "# Integration of memory in chains\n",
+    "**RunnableWithMessageHistory()** automates, Loading and Saving of context <br>\n",
+    "\n",
+    "The get_session_history function is crucial for managing separate histories per user or session. In a real application, store would be replaced by a database (like Firestore, as mentioned in the initial instructions, or Redis, etc.).\n",
+    "\n",
+    "The config={\"configurable\": {\"session_id\": session_id}} parameter in invoke() is how you tell RunnableWithMessageHistory which conversation history to use.\n",
+    "\n",
+    "You no longer manually call memory.save_context() or memory.load_memory_variables(); RunnableWithMessageHistory handles it automatically.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f99d7871",
+   "id": "8c0938f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='The capital of France is Paris.' additional_kwargs={} response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash', 'safety_ratings': []} id='run--58f27467-873c-4346-84a2-55d060fa2318-0' usage_metadata={'input_tokens': 16, 'output_tokens': 8, 'total_tokens': 24, 'input_token_details': {'cache_read': 0}}\n",
+      "\n",
+      " content='The previous question was \"What is the capital of France?\"' additional_kwargs={} response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash', 'safety_ratings': []} id='run--0b4f8cb3-ce84-4e8c-9494-0331c337f9d4-0' usage_metadata={'input_tokens': 28, 'output_tokens': 13, 'total_tokens': 41, 'input_token_details': {'cache_read': 0}}\n",
+      "\n",
+      " content=\"I don't have record of a previous question in this current conversation. This is our first interaction!\" additional_kwargs={} response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash', 'safety_ratings': []} id='run--7769b74e-f550-48a8-97de-29cd7fcd35c3-0' usage_metadata={'input_tokens': 14, 'output_tokens': 22, 'total_tokens': 36, 'input_token_details': {'cache_read': 0}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.runnables import RunnableWithMessageHistory\n",
+    "store={}\n",
+    "\n",
+    "def get_session(session_id:str)->ChatMessageHistory:\n",
+    "    if session_id not in store:\n",
+    "        store[session_id] = ChatMessageHistory()\n",
+    "    return store[session_id]\n",
+    "\n",
+    "core_chain=(\n",
+    "    ChatPromptTemplate.from_messages([\n",
+    "        (\"system\", \"You are a helpful assistant who remembers conversations.\"),\n",
+    "        MessagesPlaceholder(variable_name=\"history\"),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "    ])\n",
+    "    | llm\n",
+    ")\n",
+    "\n",
+    "chain_with_memory=RunnableWithMessageHistory(\n",
+    "    core_chain,\n",
+    "    get_session_history=get_session,\n",
+    "    input_messages_key=\"input\",\n",
+    "    history_messages_key=\"history\"\n",
+    ")\n",
+    "\n",
+    "session_1=\"123\"\n",
+    "\n",
+    "response = chain_with_memory.invoke(\n",
+    "    {\"input\": \"What is the capital of France?\"},\n",
+    "    config={\"configurable\": {\"session_id\": session_1}}\n",
+    ")\n",
+    "print(response)\n",
+    "\n",
+    "response_2= chain_with_memory.invoke(\n",
+    "    {\"input\": \"What is the previous question\"},\n",
+    "    config={\"configurable\": {\"session_id\": session_1}}\n",
+    ")\n",
+    "print(\"\\n\",response_2)\n",
+    "session_2=\"456\"\n",
+    "response_3 = chain_with_memory.invoke(\n",
+    "    {\"input\": \"What is the previous question\"},\n",
+    "    config={\"configurable\": {\"session_id\": session_2}}\n",
+    ")\n",
+    "print(\"\\n\",response_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a531793e",
    "metadata": {},
    "outputs": [],
    "source": []
